Update example in main.tex to reflect correct university name in if-elif-else usage

--- a/main.tex
+++ b/main.tex
@@ -491,7 +491,7 @@ else:
 
 \begin{codebox}{(ตัวอย่าง) การใช้ if-elif-else ใน Python}
 \begin{lstlisting}[style=python]
-name = "KMITL"
+name = "KMUT"
 
 if name == "KMUTNB":
     print("Hello")
